--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="script.css">
     <script src="towerofhanoi.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
     <title>Tower of Hanoi</title>
 </head>
 <body>
-    <h1>Tower of Hanoi - Judith Moya & Kristina Delvallee</h1>
+    <header id="header-background">
+        <div class="logo"></div>
+    </header>
+    <h1>Tower of Hanoi </br> Judith Moya & Kristina Delvallee</h1>
 </body>
 </html>
