--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="script.css">
-    <script src="towerofhanoi.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
     <title>Tower of Hanoi</title>
 </head>
 <body>
-    <header id="header-background">
-        <div class="logo"></div>
-    </header>
     <h1>Tower of Hanoi </br> Judith Moya & Kristina Delvallee</h1>
+    <div id="game">
+        <div class="tower" id="tower1">
+            <div id="disc4" class="disc" data-width="4"></div>
+            <div id="disc3" class="disc" data-width="3"></div>
+            <div id="disc2" class="disc" data-width="2"></div>
+            <div id="disc1" class="disc" data-width="1"></div>
+        </div>
+        <div class="tower" id="tower2"></div>
+        <div class="tower" id="tower3"></div>
+    </div>
+    <script src="towerofhanoi.js"></script>
 </body>
 </html>
